Fix hero slider height jumping on slide change due to subtitle text wrapping

--- a/src/components/HeroSlider/HeroSlider.module.css
+++ b/src/components/HeroSlider/HeroSlider.module.css
@@ -108,6 +108,7 @@
   max-width: 580px;
   line-height: 1.8;
   margin-bottom: 2rem;
+  min-height: 105px;
 }
 
 .ctas {
